Better explain nsIWebNavigation "document" attribute, fix spelling of "referringURI" attribute. b=192322 r=danm@netscape.com sr=bzbarsky@mit.edu a=asa@mozilla.org